<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xangnun.facealarm.MainActivity"
    android:background="#303030"
    android:theme="@android:style/ThemeOverlay.Material.Dark">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:elevation="9001dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/button_leaderboard"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/leader"
        android:layout_margin="16dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/button_set_alarm"
        android:layout_above="@+id/button_leaderboard"
        android:layout_centerHorizontal="true"
        android:background="@drawable/alarm"
        android:layout_margin="16dp"/>

    <com.facebook.login.widget.LoginButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_below="@+id/button_leaderboard"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"/>

</RelativeLayout>
