<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="#303030">

    <LinearLayout
        android:id="@+id/infoSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hour"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:text="HOUR"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/minute"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:text="MINUTE"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/ampm"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:text="AMPM"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="#ffffff"/>
        </LinearLayout>

</RelativeLayout>